Correction of the bug on the social media who disappear on mobile

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -315,7 +315,6 @@ input[type="submit"] {
 /*End Contact Section*/
 
 @media screen and (max-width: 768px) {
-
   .top-nav .icon-menu {
     display: none;
   }
@@ -401,7 +400,6 @@ input[type="submit"] {
 @media screen and (max-width: 600px) {
   .top-nav.responsive ul {
     order: 2;
-
   }
 
   .top-nav.responsive a {
@@ -425,6 +423,10 @@ input[type="submit"] {
 @media screen and (max-width: 600px) {
   .nav-list li {
     display: none;
+  }
+
+  .nav-list.soc-list li {
+    display: flex;
   }
 
   .top-nav .icon-menu {
@@ -475,6 +477,6 @@ input[type="submit"] {
   }
 
   input[type="submit"] {
-    width: 25%
+    width: 25%;
   }
 }
